[gd_scene load_steps=9 format=3 uid="uid://bwtx4th0g52c6"]

[ext_resource type="Script" path="res://UI/Fapplets/DikDok/DikDok.gd" id="1_qj84m"]
[ext_resource type="PackedScene" uid="uid://dblej5uujs5ew" path="res://UI/Fapplets/DikDok/FrameButton.tscn" id="2_bnkps"]
[ext_resource type="Texture2D" uid="uid://c4r6mfybacvqd" path="res://UI/Fapplets/DikDok/emoji_button.png" id="2_ko2d5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5480"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="AtlasTexture" id="AtlasTexture_anf6y"]
atlas = ExtResource("2_ko2d5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jxox"]
atlas = ExtResource("2_ko2d5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv6nu"]
atlas = ExtResource("2_ko2d5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp2cv"]
atlas = ExtResource("2_ko2d5")
region = Rect2(256, 0, 64, 64)

[node name="DikDok" type="PanelContainer"]
offset_right = 440.0
offset_bottom = 550.0
script = ExtResource("1_qj84m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_e5480")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="EmojiButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
texture_normal = SubResource("AtlasTexture_anf6y")
texture_pressed = SubResource("AtlasTexture_8jxox")
texture_hover = SubResource("AtlasTexture_vv6nu")
texture_disabled = SubResource("AtlasTexture_vp2cv")

[node name="EmojiSelector" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 4

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "0"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "1"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "2"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "3"

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "4"

[node name="Button6" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "5"

[node name="Button7" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "6"

[node name="Button8" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/EmojiSelector"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "7"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FrameButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 9

[node name="Button01" parent="MarginContainer/VBoxContainer/MarginContainer/FrameButtons" instance=ExtResource("2_bnkps")]
layout_mode = 2

[node name="Button02" parent="MarginContainer/VBoxContainer/MarginContainer/FrameButtons" instance=ExtResource("2_bnkps")]
layout_mode = 2

[node name="Button03" parent="MarginContainer/VBoxContainer/MarginContainer/FrameButtons" instance=ExtResource("2_bnkps")]
layout_mode = 2

[node name="Button04" parent="MarginContainer/VBoxContainer/MarginContainer/FrameButtons" instance=ExtResource("2_bnkps")]
layout_mode = 2
